--- a/README
+++ b/README
@@ -1,1 +1,17 @@
 ## Project Getting and Cleaning Data Course Project
+# Program reads all the text files provided in the zip file
+# I separate in 6 runs
+1 look for files with string body
+2.look for files with string total
+3.Get file y_test.txt
+4.Get file y_train.txt
+5.Get file X_test.txt
+6.Get file X_train.txt
+
+Final steps
+- merge 1 & 2 --> md1
+- merge 5 & 6 --> md2
+- merge all md1 & md2
+
+Write final merge accelerometers.txt
+
